z-index fix

--- a/index_data/styles.css
+++ b/index_data/styles.css
@@ -219,7 +219,7 @@ nav{
     bottom: 2rem;
     font-size: 4rem;
     line-height: 1em;
-    z-index: 6;
+    z-index: 10;
 
     background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #fff, transparent, transparent);
     -webkit-background-clip: text;
@@ -480,7 +480,7 @@ nav{
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    z-index: 400;
+    z-index: 3;
 }
 
 .m_circle.m_c_large {
